# WorkingWithFiles

./: .gitignore  README.md  example.ipynb
doc/: INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  setup.py  toml_gen.py
src/WorkingWithFiles/: WorkingWithFiles.py  __init__.py  about.py  datasetfuncs.py
tests/: example.ipynb
