[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WorkingWithFiles"
version = "0.1.2"
description = "Functions to find and list files"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["files", "library"]
dependencies = [
    "natsort"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/WorkingWithFiles/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/WorkingWithFiles/tree/main/doc"
"Source" = "https://github.com/trucomanx/WorkingWithFiles"

[tool.setuptools]
packages = ["WorkingWithFiles"]
